Figured out the spacing issue. Reduced the padding by a little over 50%. Used index elements to highlight the section and identify where I needed to fix the changes in VSC! Onto Stretch.

--- a/css/index.css
+++ b/css/index.css
@@ -281,10 +281,12 @@ footer {
   .home .walk {
     width: 100%;
     flex-direction: column-reverse;
+    margin-top: 10px;
+    padding: 20px 25px;
   }
   .home .walk .walk-text {
     width: 100%;
-    margin-top: 2%;
+    padding-top: 4%;
   }
   .home .walk .walk-img {
     width: 100%;
