--- a/less/home-page.less
+++ b/less/home-page.less
@@ -90,12 +90,14 @@
       flex-direction: column-reverse;
       .walk-text{
         width: 100%;
-        margin-top:2%;
+        padding-top:4%;
       }
       .walk-img{
         width:100%;
         margin-left: 0;
       }
+      margin-top: 10px;
+      padding: 20px 25px;
     }
   }
 }// home
